# SUNCGtoolbox

./: .gitignore  create_detection_label.py  create_detection_label_medoit.py  find_valid_objects.py  overlap_train_scenID_1_room_3.txt  parallel_process.py  process_houses.sh  sample_object.sh  sample_room.py  sample_room.sh  statistics.py  vis_label.py
cullpcd/: CMakeLists.txt  cullpcd.cpp
depth2pcd/: CMakeLists.txt  depth2pcd.cpp  depth2pcd2.cpp  fuse_depths.cpp
findobjects/: CMakeLists.txt  findobjects.cpp
gaps/apps/scn2cam/: scn2cam.cpp
gaps/pkgs/: Makefile
metadata/: ValidObjects.csv
scn2pcd/: CMakeLists.txt  pcd2cameracoord.cpp  scn2pcd.cpp  scn2poses.cpp
view2pcd/: CMakeLists.txt  view2pcd.cpp
